# pyradiance

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  MANIFEST.in  Makefile  README.md  RPICT_BINDINGS_SUMMARY.md  ci_test.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  setup.py  sitemap.xml  sync.py
.github/workflows/: build_test.yml  main.yml  pypi_upload.yml  python-publish.yml
assets/sample_files/: readme.txt
assets/sample_files/room/: materialBlack.rad  materials.rad  points.txt  room.rad  roomBlack.rad
assets/sample_files/room/assets/: USA_NY_New.York-Central.Park.725033_TMY3m.epw  arrow.rad  materialGlazingGlow.rad  origin.rad  ptsArray.rad
assets/sample_files/room/blinds/: GlazingGlow.rad  blinds.rad  blindsOnly.rad  blindsT3.xml  blindsWithProxy.rad
assets/sample_files/room/commands/: 2PM_DDS.sh  2PM_DayCoeff.sh  2PM_Disc.sh  2PM_Sky.sh  2PM_Views.sh  3PM.sh  3PM_East.sh  3PM_NonCop.sh  3PM_Param.sh  3PM_VarShad.sh  4PM_FmtxF1.sh  4PM_FmtxFH.sh  4PM_FmtxFN.sh  4PM_ParamF1.sh  4PM_VarShadF1.sh  5PM.sh  6PM_FMatrixFH.sh
assets/sample_files/room/commandsWin/: index.html
assets/sample_files/room/fports/: F1.rad  F1wrong.rad  FH.rad  FHwrong.rad  FN.rad  FNa.rad  FNb.rad  FNc.rad  FNd.rad  FNe.rad  FNf.rad  FNg.rad
assets/sample_files/room/matrices/: index.html
assets/sample_files/room/matrices/cds/: index.html
assets/sample_files/room/matrices/dc/: index.html
assets/sample_files/room/matrices/dcd/: index.html
assets/sample_files/room/matrices/dmtx/: index.html
assets/sample_files/room/objects/: Ceiling.rad  ExteriorWalls.rad  Floor.rad  Glazing.rad  GlazingGlow.rad  GlazingVmtx.rad  GlazingVmtxBlack.rad  GlazingVmtxx.rad  InteriorWall.rad
assets/sample_files/room/octrees/: index.html
assets/sample_files/room/overhang/: DiffuseGlass.xml  aluminiumGrate.rad  diffuseGlass.rad  metalGrate.xml  metalGrateModel.rad  metalGrateSection.rad
assets/sample_files/room/results/: index.html
assets/sample_files/room/skies/: NYC_Per_DH.sky  suns.rad
assets/sample_files/room/skyDomes/: skyglowR1.rad  skyglowR2.rad  skyglowR3.rad  skyglowR4.rad  skyglowR5.rad  skyglowR6.rad
assets/sample_files/room/skyVectors/: index.html
assets/sample_files/room/varShading/: GlazingVmtx1.rad  GlazingVmtx2.rad  GlazingVmtx3.rad  GlazingVmtx4.rad
assets/sample_files/room/views/: bsdf.vf  east2.vf  eastBlinds.vf  externalClose.vf  fclose2.vf  grateClose.vf  grateSecClose.vf  in2.vf  skyUp.vf  skyUpSouth.vf  skyUpXNeg.vf  skyUpXPos.vf  south.vf
assets/sample_files/room2/: materials.rad  points.txt  room.rad
assets/sample_files/room2/assets/: NYC.wea
assets/sample_files/room2/commands/: FH.sh  FHwoOverhang.sh  FN.sh
assets/sample_files/room2/commandsWin/: index.html
assets/sample_files/room2/fports/: FH.rad  FN.rad  FNa.rad  FNb.rad  FNc.rad  FNd.rad  FNe.rad  FNf.rad  FNg.rad  FNh.rad  FNi.rad  FNj.rad  FNk.rad  FNl.rad  FNm.rad
assets/sample_files/room2/matrices/: index.html
assets/sample_files/room2/objects/: Ceiling.rad  Clerestory1.rad  Clerestory2.rad  Clerestory3.rad  ExteriorWalls.rad  Floor.rad  Glazing1.rad  Glazing2.rad  Glazing3.rad  Ground.rad  InteriorWall.rad  Mullions.rad
assets/sample_files/room2/octrees/: index.html
assets/sample_files/room2/overhang/: Grates.rad
assets/sample_files/room2/results/: index.html
assets/sample_files/room2/skies/: index.html
assets/sample_files/room3/: materials.rad  room.rad
assets/sample_files/room3/assets/: NYC.wea  USA_NY_New.York.City-Central.Park.94728_TMY_3.epw
assets/sample_files/room3/commands/: F1.sh  FH.sh  FN.sh
assets/sample_files/room3/commandsWin/: index.html
assets/sample_files/room3/fports/: F1.rad  FH.rad  FN.rad  FNa.rad  FNb.rad  FNc.rad  FNd.rad  FNe.rad  FNf.rad  FNg.rad  FNh.rad  FNi.rad
assets/sample_files/room3/matrices/: index.html
assets/sample_files/room3/objects/: Ceiling.rad  ExteriorWalls.rad  Floor.rad  Ground.rad  InteriorWall.rad
assets/sample_files/room3/octrees/: index.html
assets/sample_files/room3/overhang/: aluminium_metal_grate.rad
assets/sample_files/room3/results/: index.html
assets/sample_files/room3/skies/: index.html
assets/sample_files/room3/skyDomes/: skyglow.rad
assets/sample_files/room3/skyVectors/: NYC.smx
docs/: how-to-guides.md  index.md  reference.md  tutorials.md
docs/assets/sample_files/: readme.txt
docs/howtos/: bsdf.md  guide1.md  guide2.md  guide3.md  index.md
how-to-guides/: index.html
howtos/: index.html
howtos/bsdf/: index.html
howtos/guide1/: index.html
howtos/guide2/: index.html
howtos/guide3/: index.html
howtos/guide4/: index.html
pyradiance/: __init__.py  anci.py  api.py  aux.py  cal.py  cv.py  data.py  gen.py  lib.py  model.py  ot.py  param.py  parameter.py  parsers.py  px.py  rt.py  util.py
pyradiance/data/model_cubical_office/: v1a.vf  v1b.vf  v1bc.vf  v1c.vf  v2a.vf  v2b.vf  v3a.vf  v3b.vf  v4a.vf  v4b.vf  vfacade.vf
pyradiance/data/model_cubical_office/Objects/: materials.mat
reference/: index.html
search/: search_index.json
src/: pyradiance_ext.cpp
src/binding/: bsdf_ext.cpp  params.cpp  pyradiance_ext.cpp  radiance_ext.cpp  view.cpp
src/pyradiance/: __init__.py  anci.py  cal.py  cv.py  gen.py  genbsdf.py  lib.py  model.py  ot.py  param.py  px.py  rt.py  util.py
src/radiance/cal/: CMakeLists.txt  calc.c
src/radiance/common/: CMakeLists.txt  error.c  gethomedir.c  getpath.c  random.c
src/radiance/cv/: CMakeLists.txt
src/radiance/ot/: CMakeLists.txt
src/radiance/px/: CMakeLists.txt
src/radiance/rt/: CMakeLists.txt  RcontribSimulManager.cpp  RdataShareFile.cpp  RtraceSimulManager.cpp  RtraceSimulManager.h  Version.c  freeobjmem.c  func.c  func.h  generate_version.cmake  rxcmain.cpp
src/radiance/util/: CMakeLists.txt
test/: _bsdf.py  test_api.py  test_rt.py
test/Resources/: comp_dirdir.py  dirs.txt  sky.rad  skyr4.rad
tests/: test.oct  test_api.py  test_bind.py  test_bsdf.py  test_model.py  test_rcontrib.py  test_rtrace.py
tests/Resources/: contrib.oct  skyglow.rad  spectral.csv  t3.xml  trace.oct
tutorials/: index.html
(+66 files in other folders)
